# kde1-kdetoys

./: CMakeLists.txt
po/: kmoon.pot  kworldwatch.pot
po/br/: kmoon.po  kworldwatch.po
po/cs/: kmoon.po  kworldwatch.po
po/de/: kmoon.po  kworldwatch.po
po/es/: kmoon.po  kworldwatch.po
po/fr/: kmoon.po  kworldwatch.po
po/hr/: kmoon.po
po/is/: kmoon.po  kworldwatch.po
po/ja/: kworldwatch.po
po/no/: kmoon.po  kworldwatch.po
po/pt/: kmoon.po  kworldwatch.po
po/pt_BR/: kmoon.po  kworldwatch.po
po/ro/: kworldwatch.po
po/sk/: kmoon.po
po/sv/: kmoon.po  kworldwatch.po
po/zh_CN.GB2312/: kmoon.po
